	     assertion failure in iopen since the inode's dentry list contains
	     both a connected and disconnected dentry.

Severity   : normal
Bugzilla   : 16496
Description: assertion failure in ldlm_handle2lock()
Details    : fix a race between class_handle_unhash() and class_handle2object()
	     introduced in lustre 1.6.5 by bug 13622.

-------------------------------------------------------------------------------


2008-05-26  Sun Microsystems, Inc.
       * version 1.6.5
       * Support for kernels:
	2.6.5-7.311 (SLES 9),
	2.6.9-67.0.7.EL (RHEL 4),
	2.6.16.54-0.2.5 (SLES 10),
	2.6.18-53.1.14.el5 (RHEL 5),
	2.6.22.14 vanilla (kernel.org)
       * Client support for unpatched kernels:
	 (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	 2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to problems with nested symlinks and FMODE_EXEC (bug 12652),
	 we do not recommend using patchless RHEL4 clients with kernels
	 prior to 2.6.9-55EL (RHEL4U5).
       * Recommended e2fsprogs version: 1.40.7-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
	 removed cwd "./" (refer to Bugzilla 14399).
       * A new quota file format has been introduced in 1.6.5.
	 The format conversion from prior releases is handled transparently,
	 but releases older than 1.4.12/1.6.5 will not understand this new
	 format.  The automatic format conversion can be avoided by running
	 the following command on the MDS before upgrading:
		'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	 For more information, please refer to bugzilla 13904.

Severity   : major
Bugzilla   : 14443
Description: quota performance fix
Details    : quota data is written in journalled mode instead of ordered to
	     increase performance

Severity   : normal
Bugzilla   : 13915
Description: lfs support for human-readable quota grace time strings